Fri Apr 03 15:42:40 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: joins and caps are round.  Fixes bad looking joins
	  on graphs of quickly oscillating functions

Sun Mar 15 00:04:08 2009  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.6

Sun Mar 15 00:01:20 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/*.[ch]: do much interface cleanup again.

Mon Mar 09 16:48:03 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/*.[ch]: lots of cleanup plus bin compat breakage for plugins:
	  Moved many things to the gel_ or genius_ namespace for consistency
	  sake.  There aren't actually any plugins that I know of so, who
	  cares if this all changes.  Plus bin compat is already broken this
	  release, as it does almost every other release

	* src/funclib.c: accept opposite orientation interval for
	  CompositeSimpsonsRule

	* src/geniustests.txt: update tests

Thu Mar 05 01:47:55 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: LinePlotDrawLegends parameter actually updates
	  the legends drawing in real time.  Don't store the parameter value
	  as an extra.

	* src/graphing.c: always update spinboxes before plotting something
	  not just on activate.

Wed Mar 04 23:58:43 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: add two more style strings to LinePlotDrawLine.
	  First "window" can set the window, with a "fit" being a fitting
	  window.  Also allow drawing of arrows by "arrow" followed by
	  "end", "both", "origin", "none" (done in canvas coordinates, not
	  screen coordinates, not ideal, try zooming)
	
	* src/graphing.c, src/funclib.c: a bit of cleanup, some pointless
	  optimizations, and make sure the graphing functions don't get
	  called during plotting.  Also setting LinePlotWindow,
	  SurfacePlotWindow will change zoom immediately as one would expect

	* help/C/gel-function-list.xml: update

Mon Mar 02 02:38:40 2009  Jiri (George) Lebl <jirka@5z.com>

	* **/Makefile.am: implement profile-generate and profile-use