@@ -1,3 +1,8 @@
+Sun Apr 19 18:55:12 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: Fix conflict with changing precision and the mpfr
+	  cache.  Also fix a possible extra negation error in pow_z.
+
 Fri Apr 03 15:42:40 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: joins and caps are round.  Fixes bad looking joins
